<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    android:padding="16dp"
    tools:context=".presentation.feature.cart.CartFragment">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginVertical="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_cart_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/string_cart_list"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"/>


    <CheckBox
        android:id="@+id/cb_add_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/string_add_all"
        android:checked="false"
        android:paddingStart="6dp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_cart_list"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/string_delete"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toTopOf="@+id/cb_add_all"
        app:layout_constraintBottom_toBottomOf="@+id/cb_add_all"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cb_add_all"
        app:layout_constraintBottom_toTopOf="@+id/const_bottom_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_bottom_section"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_title_total_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/string_total"
            android:textSize="12sp"
            android:fontFamily="@font/poppins"
            android:textColor="?attr/colorControlNormal"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_total_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/string_dummy_balance"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="?attr/colorControlNormal"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_total_payment"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorGray"
            tools:text="@string/string_buy_now"
            android:enabled="false"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>