<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient"
    tools:context=".presentation.feature.setting.SettingFragment">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginTop="44dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/string_your_profile"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_user"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginVertical="52dp"
        android:background="@color/colorOffWhite"
        android:contentDescription="@string/string_image_user"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_setting"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay"
        tools:src="@drawable/ic_person" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_user"
        android:fontFamily="@font/poppins_semibold"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textColor="?attr/colorOnSurface"
        tools:text="@string/string_dummy_fullname" />

    <TextView
        android:id="@+id/tv_usermail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="?attr/textAppearanceTitleSmall"
        android:textColor="?attr/colorOnSurfaceVariant"
        tools:text="@string/string_dummy_email" />

    <LinearLayout
        android:id="@+id/ll_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_usermail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"/>

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="24dp"
            tools:text="@string/string_dummy_lorem_ipsum"
            android:maxLines="1"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:textAppearance="?attr/textAppearanceTitleSmall"
            android:textColor="?attr/colorOnSurfaceVariant"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginVertical="24dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/string_en"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:textAlignment="center"
            android:textColor="?attr/colorControlNormal"
            android:fontFamily="@font/poppins"
            android:layout_gravity="center"/>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sw_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/string_id"
            android:textSize="14sp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="?attr/colorControlNormal"
            android:fontFamily="@font/poppins"
            android:layout_gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/string_logout"
        android:textAllCaps="false"
        style="@style/MyButtonStyle"
        android:padding="16dp"
        android:backgroundTint="@color/colorYellow"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/londrina_solid"
        android:letterSpacing="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>