<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorDark"
    tools:context=".presentation.feature.profile.ProfileFragment">

    <ImageView
        android:id="@+id/iv_bg_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_user"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:scaleType="centerCrop"
        android:layout_marginVertical="32dp"
        android:background="@color/colorOffWhite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_register"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay"
        android:layout_gravity="center"
        tools:src="@drawable/ic_person"
        android:contentDescription="@string/string_image_user" />


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:textSize="24sp"
        tools:text="@string/string_set_up_profile"
        android:fontFamily="@font/poppins_semibold"
        android:letterSpacing="0.3"
        android:textColor="@color/colorOffWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_name_input"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:layout_marginHorizontal="16dp"
        app:boxStrokeColor="@color/colorBlueGray"
        app:boxBackgroundColor="@color/colorBlueGray"
        app:helperTextEnabled="true"
        tools:helperText="@string/string_helper_email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:hint="@string/string_your_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColorHint="@color/colorDark"
            android:textColor="@color/colorDark"
            android:fontFamily="@font/poppins"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        tools:text="@string/string_create_account"
        style="@style/MyButtonStyle"
        android:padding="16dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorYellow"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/londrina_solid"
        android:letterSpacing="0.3"
        app:layout_constraintTop_toBottomOf="@id/et_name_input"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="24dp"/>

    <ProgressBar
        android:id="@+id/pb_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>