<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.feature.onboarding.OnboardingFragment">

    <ImageView
        android:id="@+id/iv_background_onboarding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_onboarding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@+id/iv_background_onboarding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_authentication"
        style="@style/MyButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="75sp"
        android:backgroundTint="@color/colorYellow"
        android:fontFamily="@font/londrina_solid"
        android:letterSpacing="0.3"
        android:padding="16dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp"
        android:textAllCaps="false"
        android:paddingTop="10dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/string_join_now" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabIndicatorColor="@android:color/transparent"
        android:background="@android:color/transparent"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        android:layout_marginVertical="26dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_authentication"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_skip_onboarding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/string_skip"
        android:fontFamily="@font/righteous_regular"
        android:textSize="14sp"
        android:layout_marginStart="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tabs"
        app:layout_constraintBottom_toBottomOf="@+id/tabs"
        android:textColor="@color/colorOffWhite"/>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/string_next"
        android:fontFamily="@font/righteous_regular"
        android:textSize="14sp"
        android:layout_marginEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tabs"
        app:layout_constraintBottom_toBottomOf="@+id/tabs"
        android:textColor="@color/colorOffWhite"/>

</androidx.constraintlayout.widget.ConstraintLayout>